# FT_FXNewslab

./: .gitignore  AGENTS.md  CODEX_BOOTSTRAP_PROMPT.md  PLANS.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
apps/fx_research/: AGENTS.md  pyproject.toml
apps/fx_research/src/fx_research/: __init__.py  __main__.py  application.py  collection.py  detail.py  errors.py  evaluation.py  evaluation_application.py  evaluation_metrics.py  evaluation_persistence.py  feature_production.py  forward.py  forward_application.py  forward_calculation.py  forward_persistence.py  http.py  normalization.py  persistence.py  source_registry.py
apps/fx_research/src/fx_research/infrastructure/: gmo_fx.py  http_client.py  oanda.py  openai.py
apps/fx_research/src/fx_research/infrastructure/bank_of_japan/: __init__.py  html.py
apps/fx_research/src/fx_research/infrastructure/federal_reserve/: __init__.py  rss.py
apps/fx_research/src/fx_research/migrations/: 0001_ingestion_state.sql  0002_fetch_run_stage.sql  0003_forward_signal_evaluation.sql  0004_signal_validation_framework.sql  0005_evaluation_input_snapshot.sql
apps/swap_bot/: AGENTS.md  pyproject.toml
docs/: 00_VISION.md  01_ARCHITECTURE.md  02_DOMAIN_MODEL.md  03_SIGNAL_AND_RESEARCH.md  04_SWAP_BOT.md  05_DATA_AND_VERSIONING.md  06_REPOSITORY_STRUCTURE.md  07_ENGINEERING_STYLE.md  08_TEST_STRATEGY.md  09_MIGRATION_STRATEGY.md  PROGRAM.md  README.md
docs/adr/: 0001-research-and-live-are-siblings.md  0002-currency-first-signal-model.md  0003-ai-is-a-feature-producer.md  0004-signals-are-immutable.md  0005-shared-sqlite-signal-store.md  0006-gmo-fx-is-primary-forward-market-source.md  (+2 more)
docs/exec-plans/: 0001-shared-domain-foundation.md  (+5 more)
tests/: adoption_factories.py  evaluation_factories.py  evaluation_integration_helpers.py  factories.py
(+110 files in other folders)
