[project]
name = "ft-fxnewslab-workspace"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/fx_core/src",
    "packages/fx_signal_store/src",
    "apps/fx_research/src",
    "apps/swap_bot/src",
]
addopts = "--strict-markers"
markers = [
    "source_smoke: opt-in checks against official external News sources",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = [
    "packages/fx_core/src",
    "packages/fx_signal_store/src",
    "apps/fx_research/src",
    "apps/swap_bot/src",
]

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true
