[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "fx-core>=0.1.0",
    "fx-signal-store>=0.1.0",
    "pypdf>=5.0",
]

[tool.setuptools.package-data]
fx_research = ["migrations/*.sql"]
